# nomad-tfsc-general

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.rej  requirements_docs.txt
docs/: index.md
docs/plugin_setup/: installation_and_application.md
docs/step-by-step_user_guide/: 00-overview.md  01-spreadsheet_workflow.md  02-upload_data.md  03-upload_measurements.md  04-voila_analysis_tools.md  05-how_to_cite.md  06-contact.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad-tfsc-general/: .cruft.json  LICENSE  MANIFEST.in  README.md  move_template_files.sh  pyproject.toml
nomad-tfsc-general/docs/: index.md
nomad-tfsc-general/src/nomad_tfsc_general/schema_packages/: schema_package.py
nomad-tfsc-general/tests/apps/: test_app.py
nomad-tfsc-general/tests/parsers/: test_parser.py
plugin_setup/: installation_and_application.html
reference/: references.html
search/: search_index.json
src/nomad_tfsc_general/actions/: __init__.py
src/nomad_tfsc_general/actions/simple_action/: __init__.py  activities.py  workflows.py
src/nomad_tfsc_general/apis/: ARCHITECTURE.md  __init__.py  upload_qc.py
src/nomad_tfsc_general/apis/routers/: __init__.py  auth.py  uploads.py
src/nomad_tfsc_general/apis/static/: app.js  index.html  style.css
src/nomad_tfsc_general/apps/: __init__.py  dashboard_app.py  tfsc_perseus_layer_search.py  tfsc_perseus_sample_search.py
src/nomad_tfsc_general/parsers/: __init__.py  __init__.py.rej  parser.py  product_mapper.py  substance_mapper.py  tfsc_general_batch_parser.py  tfsc_general_measurement_parser.py  tfsc_perseus_batch_parser.py  utils.py
src/nomad_tfsc_general/schema_packages/: __init__.py  tfsc_general_package.py
src/nomad_tfsc_general/schema_packages/file_parser/: jv_archive.py  jv_parser.py  mppt_parser.py
step-by-step_user_guide/: 00-overview.html  01-spreadsheet_workflow.html  02-upload_data.html  03-upload_measurements.html  04-voila_analysis_tools.html  05-how_to_cite.html  06-contact.html
tests/actions/: test_action.py
tests/data/: .~lock.20250516_experiment_file.xlsx#  .~lock.tfsc_experiment_parser_test.xlsx#  .~lock.tfsc_test_exp_parser.xlsx#  .~lock.tfsc_test_experiment.xlsx#  .~lock.tfsc_test_file.xlsx#  20250516_experiment_file.xlsx  PERS_1_1_C-1.jv.txt  PERS_1_1_C-2.jv.IV  PERS_1_1_C-3.jv.txt  PERS_loc1_mppt.MPP  PERS_loc2_mppt_20260204_093607.mpp.txt  gravure_printing_test.xlsx  lamination_test.xlsx  module_test.xlsx  product_mapping_test.xlsx  screen_printing_test.xlsx  test.archive.yaml  testt 205 J-V Data.IV.csv  tfsc_experiment_parser_test.xlsx  tfsc_experiment_test_file.xlsx  tfsc_test_exp_parser.xlsx  tfsc_test_experiment.xlsx
tests/parsers/: test_blade_coating.py  test_excel_parser.py  test_gravure_printing.py  test_jv_measurement.py  test_lamination.py  test_module.py  test_mppt.py  test_product_mapping.py  test_screen_printing.py  utils.py
tutorial/: tutorial.html
